force-app/main/default/objects/Sales_Comp_Integration_Config__mdt/Sales_Comp_Integration_Config__mdt.object-meta.xml
<CustomObject>
    <description>Runtime settings for the sales compensation integration.</description>
    <label>Sales Comp Integration Config</label>
    <pluralLabel>Sales Comp Integration Configs</pluralLabel>
</CustomObject>