force-app/main/default/objects/Sales_Comp_Integration_Config__mdt/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>