force-app/main/default/objects/Sales_Comp_Integration_Config__mdt/fields/Max_Webhook_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Webhook_Attempts__c</fullName>
    <label>Max Webhook Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>