force-app/main/default/objects/Sales_Comp_Integration_Config__mdt/fields/Webhook_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Endpoint__c</fullName>
    <label>Webhook Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>