force-app/main/default/objects/Sales_Comp_Integration_Config__mdt/fields/Webhook_Event_Version__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Event_Version__c</fullName>
    <label>Webhook Event Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>