force-app/main/default/objects/Sales_Comp_Integration_Config__mdt/fields/Webhook_Shared_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Shared_Secret__c</fullName>
    <label>Webhook Shared Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>